--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -2,6 +2,7 @@
   display: "flex";
   justify-content: "center";
   align-items: "center";
-  height: 50px;
-  background-color: lightblue;
+  height: 80px;
+  margin-bottom: 30px;
+  background-color: rgb(22, 46, 65);
 }
