--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,7 +1,8 @@
 .container {
-    max-width: 1170px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
+  max-width: 73em;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1em;
+  padding-right: 1em;
+  background-color: coral;
+}
