--- a/src/components/SquareMain/SquareMain.module.css
+++ b/src/components/SquareMain/SquareMain.module.css
@@ -1,15 +1,32 @@
-.square_block {
+.gameMenuBlock {
+  margin-bottom: 2em;
+  height: 12.5em;
   display: flex;
-  justify-content: center;
-}
-.row {
-  display: flex;
-  flex-direction: row;
+  align-items: center;
 }
 
-.col {
-  height: 50px;
-  width: 50px;
+.gameBtn {
+  cursor: pointer;
+  width: 12.5em;
+  height: 3.2em;
+  margin-right: 2em;
+  background-color: blue;
+  border-radius: 5px;
+  color: white;
+  font-size: 1.37em;
+  font-weight: 600;
+}
+.gameBtn:disabled {
+  background-color: rgba(49, 49, 49, 0.6);
+  cursor: not-allowed;
+}
 
-  border: 1px solid black;
+.select {
+  cursor: pointer;
+  height: 2.5em;
+  width: 12.5em;
+  font-size: 1.2em;
+}
+.select:disabled {
+  cursor: not-allowed;
 }
